--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,9 @@
+.gradle/
+.idea/
+build/
+out/
+*.iml
+
 # Compiled class file
 *.class
 
@@ -11,6 +17,7 @@
 .mtj.tmp/
 
 # Package Files #
+!gradle/wrapper/gradle-wrapper.jar
 *.jar
 *.war
 *.nar
@@ -21,3 +28,4 @@
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
+
