--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@
 build/
 out/
 *.iml
+**/channel-config/**/*.json
 
 # Compiled class file
 *.class
@@ -23,7 +24,6 @@ out/
 *.nar
 *.ear
 *.zip
-*.tar.gz
 *.rar
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
