--- a/build.gradle
+++ b/build.gradle
@@ -6,6 +6,7 @@ buildscript {
     ext.kotlinVersion = '1.3.41'
     ext.mapstructVersion = '1.3.0.Final'
     ext.springBootVersion = '2.1.5.RELEASE'
+    ext.springCloudVersion = 'Greenwich.RELEASE'
 
     repositories {
         jcenter()
@@ -31,15 +32,24 @@ allprojects {
     apply plugin: 'maven'
     apply plugin: 'idea'
     apply plugin: 'eclipse'
+
+    [compileJava, compileTestJava]*.options*.encoding = 'UTF-8'
+    sourceCompatibility = '1.8'
+    targetCompatibility = '1.8'
+
+    repositories {
+        jcenter()
+    }
+}
+
+subprojects {
+
+    apply plugin: 'kotlin'
     apply plugin: 'kotlin'
     apply plugin: 'kotlin-spring'
     apply plugin: 'kotlin-jpa'
     apply plugin: 'kotlin-kapt'
     apply plugin: 'io.spring.dependency-management'
-
-    [compileJava, compileTestJava]*.options*.encoding = 'UTF-8'
-    sourceCompatibility = '1.8'
-    targetCompatibility = '1.8'
 
     compileKotlin {
         kotlinOptions {
@@ -68,17 +78,15 @@ allprojects {
         compile 'org.jetbrains.kotlin:kotlin-reflect'
         testCompile 'org.junit.jupiter:junit-jupiter-engine'
         testCompile 'org.junit.platform:junit-platform-runner'
+        testCompile 'org.assertj:assertj-core'
         testCompileOnly 'org.projectlombok:lombok'
         testAnnotationProcessor 'org.projectlombok:lombok'
-    }
-
-    repositories {
-        jcenter()
     }
 
     dependencyManagement {
         imports {
             mavenBom "org.springframework.boot:spring-boot-starter-parent:${springBootVersion}"
+            mavenBom "org.springframework.cloud:spring-cloud-dependencies:${springCloudVersion}"
         }
 
         dependencies {
@@ -91,6 +99,16 @@ allprojects {
 
     }
 
+    test {
+        useJUnitPlatform()
+        reports.html.enabled = false
+    }
+
+}
+
+task testReport(type: TestReport) {
+    destinationDir = file("$buildDir/reports/allTests")
+    reportOn subprojects*.test
 }
 
 
