reduce kotlin version to 1.2.71, 'cause spring gradle plugin only support kotlin 1.2.20+, but not 1.3.x

--- a/chris-reconciliation/build.gradle
+++ b/chris-reconciliation/build.gradle
@@ -1,5 +1,5 @@
 // must apply spring-boot plugin when run 'gradlew testReport', why? 
-apply plugin: 'org.springframework.boot'
+//apply plugin: 'org.springframework.boot'
 
 dependencies {
 }
