--- a/build.gradle
+++ b/build.gradle
@@ -3,9 +3,10 @@ buildscript {
     ext.embedMongoVersion = '2.2.0'
     ext.embedRedisVersion = '0.7.2'
     ext.h2Version = '1.4.199'
-    ext.kotlinVersion = '1.3.41'
+    ext.kotlinVersion = '1.2.71'
+//    ext.kotlinVersion = '1.3.41'
     ext.mapstructVersion = '1.3.0.Final'
-    ext.springBootVersion = '2.1.5.RELEASE'
+    ext.springBootVersion = '2.1.6.RELEASE'
     ext.springCloudVersion = 'Greenwich.RELEASE'
 
     repositories {
@@ -45,7 +46,8 @@ allprojects {
 subprojects {
 
     apply plugin: 'kotlin'
-    apply plugin: 'kotlin'
+    apply plugin: 'kotlin-allopen'
+    apply plugin: 'kotlin-noarg'
     apply plugin: 'kotlin-spring'
     apply plugin: 'kotlin-jpa'
     apply plugin: 'kotlin-kapt'
