--- a/build.gradle
+++ b/build.gradle
@@ -3,11 +3,17 @@ buildscript {
     ext.embedMongoVersion = '2.2.0'
     ext.embedRedisVersion = '0.7.2'
     ext.h2Version = '1.4.199'
-    ext.kotlinVersion = '1.2.71'
-//    ext.kotlinVersion = '1.3.41'
+    ext.kotlinVersion = '1.3.41'
     ext.mapstructVersion = '1.3.0.Final'
     ext.springBootVersion = '2.1.6.RELEASE'
     ext.springCloudVersion = 'Greenwich.RELEASE'
+    ext.xstreamVersion = '1.4.10'
+
+    // this will overwrite spring boot gradle plugin pom properties definition
+    // it must be set if you want to use kotlin above 1.3.x
+    // reference url: https://github.com/spring-gradle-plugins/dependency-management-plugin/issues/235
+    // line at 'wilkinsona commented on 17 Nov 2018'
+    ext['kotlin.version'] = ext.kotlinVersion
 
     repositories {
         jcenter()
@@ -88,7 +94,7 @@ subprojects {
     dependencyManagement {
         imports {
             mavenBom "org.springframework.boot:spring-boot-starter-parent:${springBootVersion}"
-            mavenBom "org.springframework.cloud:spring-cloud-dependencies:${springCloudVersion}"
+//            mavenBom "org.springframework.cloud:spring-cloud-dependencies:${springCloudVersion}"
         }
 
         dependencies {
@@ -97,6 +103,7 @@ subprojects {
             dependency "it.ozimov:embedded-redis:${embedRedisVersion}"
             dependency "org.mapstruct:mapstruct-jdk8:${mapstructVersion}"
             dependency "org.mapstruct:mapstruct-processor:${mapstructVersion}"
+            dependency "com.thoughtworks.xstream:xstream:${xstreamVersion}"
         }
 
     }
