--- a/chris-app/build.gradle
+++ b/chris-app/build.gradle
@@ -2,11 +2,19 @@ apply plugin: 'org.springframework.boot'
 
 dependencies {
 
-    compile 'org.springframework.boot:spring-boot-starter-web'
-    compile 'org.springframework.boot:spring-boot-starter-undertow'
+//    compile 'org.springframework.boot:spring-boot-starter-web'
+//    compile 'org.springframework.boot:spring-boot-starter-undertow'
+
+    compile 'org.springframework.boot:spring-boot-starter'
     compile 'org.springframework.boot:spring-boot-starter-data-mongodb'
     compile 'org.springframework.boot:spring-boot-starter-data-jpa'
     compile 'org.springframework.boot:spring-boot-starter-data-redis'
+
+    compile 'io.vertx:vertx-web'
+
+    compile 'com.fasterxml.jackson.datatype:jackson-datatype-jdk8'
+    compile 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310'
+
     compile 'com.h2database:h2'
     compile 'it.ozimov:embedded-redis'
     compile 'de.flapdoodle.embed:de.flapdoodle.embed.mongo'
