--- a/chris-app/build.gradle
+++ b/chris-app/build.gradle
@@ -14,6 +14,7 @@ dependencies {
 
     compile 'com.fasterxml.jackson.datatype:jackson-datatype-jdk8'
     compile 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310'
+    compile 'com.fasterxml.jackson.module:jackson-module-kotlin'
 
     compile 'com.h2database:h2'
     compile 'it.ozimov:embedded-redis'
