--- a/chris-app/src/main/resources/application.yml
+++ b/chris-app/src/main/resources/application.yml
@@ -2,7 +2,7 @@ spring:
   jpa:
     generate-ddl: true
     hibernate:
-      ddl-auto: update
+      ddl-auto: create-drop
     show-sql: true
     properties:
       hibernate:
