--- a/chris-app/build.gradle
+++ b/chris-app/build.gradle
@@ -27,6 +27,12 @@ dependencies {
     compile 'org.mapstruct:mapstruct-jdk8'
     kapt 'org.mapstruct:mapstruct-processor'
 
+    compile 'org.bouncycastle:bcpkix-jdk15on'
+    compile 'org.bouncycastle:bcmail-jdk15on'
+    compile 'org.bouncycastle:bcpg-jdk15on'
+    compile 'org.bouncycastle:bctls-jdk15on'
+    compile 'org.bouncycastle:bcprov-ext-jdk15on'
+
     testCompile 'org.springframework.boot:spring-boot-starter-test'
 
 }
