--- a/chris-app/build.gradle
+++ b/chris-app/build.gradle
@@ -11,6 +11,7 @@ dependencies {
     compile 'org.springframework.boot:spring-boot-starter-data-redis'
 
     compile 'io.vertx:vertx-web'
+    compile 'io.vertx:vertx-lang-kotlin'
 
     compile 'com.fasterxml.jackson.datatype:jackson-datatype-jdk8'
     compile 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310'
